<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_MotorsReset" Id="{7a3e4215-b5be-40fe-b889-7d70a5148238}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_MotorsReset
VAR_INPUT
	bExecute : BOOL;
END_VAR
VAR_OUTPUT
	bDone : BOOL;
	bError: BOOL;
	bBusy : BOOL;
END_VAR
VAR_IN_OUT
	Axis : AXIS_REF;
END_VAR
VAR
	fbReset	: MC_Reset;
	bReset	: BOOL := TRUE;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Axis Reset
IF bExecute THEN
	fbReset(Axis := Axis, Execute := bReset, Done => bDone, Error => bError, Busy => bBusy);
END_IF
IF bDone THEN
	bReset := FALSE;
END_IF
]]></ST>
    </Implementation>
    <Method Name="Reset" Id="{b9304837-371d-411d-8cb8-12a541f16836}">
      <Declaration><![CDATA[METHOD Reset : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[bReset := TRUE;
Reset := bReset;
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_MotorsReset">
      <LineId Id="58" Count="5" />
      <LineId Id="24" Count="0" />
      <LineId Id="57" Count="0" />
    </LineIds>
    <LineIds Name="FB_MotorsReset.Reset">
      <LineId Id="5" Count="1" />
      <LineId Id="8" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>